third_party/vml/Lib/csharp/ext/Libopencv.cs

// Libopencv.cs - VML libopencv FFI Bindings (C#)
// Auto-generated by GenDyn

using System.Runtime.InteropServices;

public static class Libopencv {
    [DllImport("libopencv")]
    public static extern int ocv_imread(string path);

    [DllImport("libopencv")]
    public static extern int ocv_imwrite(string path, int handle);

    [DllImport("libopencv")]
    public static extern int ocv_imshow(string title, int handle);

    [DllImport("libopencv")]
    public static extern int ocv_waitkey(int delay_ms);

    [DllImport("libopencv")]
    public static extern void ocv_cvtcolor(int src, int dst, int code);

    [DllImport("libopencv")]
    public static extern void ocv_resize(int src, int dst, int w, int h);

    [DllImport("libopencv")]
    public static extern void ocv_rectangle(int img, int x1, int y1, int x2, int y2, int r, int g, int b, int thickness);

    [DllImport("libopencv")]
    public static extern void ocv_circle(int img, int cx, int cy, int radius, int r, int g, int b, int thickness);

    [DllImport("libopencv")]
    public static extern void ocv_line(int img, int x1, int y1, int x2, int y2, int r, int g, int b, int thickness);

    [DllImport("libopencv")]
    public static extern void ocv_puttext(int img, string text, int x, int y, int r, int g, int b);

    [DllImport("libopencv")]
    public static extern int ocv_width(int handle);

    [DllImport("libopencv")]
    public static extern int ocv_height(int handle);

    [DllImport("libopencv")]
    public static extern int ocv_channels(int handle);

    [DllImport("libopencv")]
    public static extern void ocv_blur(int src, int dst, int ksize);

    [DllImport("libopencv")]
    public static extern void ocv_canny(int src, int dst, int low, int high);

    [DllImport("libopencv")]
    public static extern void ocv_threshold(int src, int dst, int thresh, int maxval, int type);

    [DllImport("libopencv")]
    public static extern int ocv_facedetect(int img, string cascade_path);

    [DllImport("libopencv")]
    public static extern void ocv_release(int handle);

}
